# AdventOfCode

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
2024/day01/mojo/: historian_hysteria.🔥
2025/day01/: example2.txt
2025/day01/mojo/: secret_entrance.🔥
2025/day02/mojo/: gift_shop.🔥
day01/: historian_hysteria.py
day02/: red-nosed_reports.py
day03/: mull_it_over.py
day04/: ceres_search.py
day05/: print_queue.py
day06/: guard_gallivant.py
day07/: bridge_repair.py
day08/: resonant_collinearity.py
day09/: disk_fragmenter.py
day1/: trebuchet.py
day10/: hoof_it.py
day11/: plutonian_pebbles.py
day12/: garden_groups.py
day13/: claw_contraption.py
day14/: restroom_redoubt.py
day15/: warehouse_woes.py
day16/: reindeer_maze.py
day17/: chronospatial_computer.py
day19/: linen_layout.py
day2/: cube_conundrum.py
day22/: monkey_market.py
day23/: lan_party.py
day3/: gear_ratios.py
day4/: scratch_cards.py
day5/: fertilizer.py
day6/: wait_for_it.py
day7/: camel_cards.py
day8/: haunted_wasteland.py
day9/: mirage_maintenance.py
scripts/: new_day.sh
shared/: pyproject.toml
shared/aoc_utils/: __init__.py  __main__.py  auth.py  input.py  puzzle.py  setup.py
shared/templates/: python_day.py
src/adventofcode/: __init__.py  aoc_utils.py
