[project]
authors = [{name = "Mosqueteiro"}]
dependencies = []
description = "Advent of Code challenges. Years are separated into branches."
name = "AdventOfCode"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
adventofcode = { path = ".", editable = true }

[tool.pixi.tasks]
new-day = "scripts/new_day.sh"
day01-test = { cmd = "ipython -i historian_hysteria.py -- --test", cwd = "day01" }
day01 = { cmd = "ipython -i historian_hysteria.py -- -f input.txt", cwd = "day01" }
day02-test = { cmd = "ipython -i red-nosed_reports.py -- --test", cwd = "day02" }
day02 = { cmd = "ipython -i red-nosed_reports.py -- -f input.txt", cwd = "day02" }
day03-test = { cmd = "ipython -i mull_it_over.py -- --test", cwd = "day03" }
day03 = { cmd = "ipython -i mull_it_over.py -- -f input.txt", cwd = "day03" }
day04-test = { cmd = "ipython -i ceres_search.py -- --test", cwd = "day04" }
day04 = { cmd = "ipython -i ceres_search.py -- -f input.txt", cwd = "day04" }
day05-test = { cmd = "ipython -i print_queue.py -- --test", cwd = "day05" }
day05 = { cmd = "ipython -i print_queue.py -- -f input.txt", cwd = "day05" }
day06-test = { cmd = "ipython -i guard_gallivant.py -- --test", cwd = "day06" }
day06 = { cmd = "ipython -i guard_gallivant.py -- -f input.txt", cwd = "day06" }
day07-test = { cmd = "ipython -i bridge_repair.py -- --test", cwd = "day07" }
day07 = { cmd = "ipython -i bridge_repair.py -- -f input.txt", cwd = "day07" }
day08-test = { cmd = "ipython -i resonant_collinearity.py -- --test", cwd = "day08" }
day08 = { cmd = "ipython -i resonant_collinearity.py -- -f input.txt", cwd = "day08" }
day09-test = { cmd = "ipython -i disk_fragmenter.py -- --test", cwd = "day09" }
day09 = { cmd = "ipython -i disk_fragmenter.py -- -f input.txt", cwd = "day09" }
day10-test = { cmd = "ipython -i hoof_it.py -- --test", cwd = "day10" }
day10 = { cmd = "ipython -i hoof_it.py -- -f input.txt", cwd = "day10" }
day11-test = { cmd = "ipython -i plutonian_pebbles.py -- --test", cwd = "day11" }
day11 = { cmd = "ipython -i plutonian_pebbles.py -- -f input.txt", cwd = "day11" }
day12-test = { cmd = "ipython -i garden_groups.py -- --test", cwd = "day12" }
day12 = { cmd = "ipython -i garden_groups.py -- -f input.txt", cwd = "day12" }
day13-test = { cmd = "ipython -i claw_contraption.py -- --test", cwd = "day13" }
day13 = { cmd = "ipython -i claw_contraption.py -- -f input.txt", cwd = "day13" }
day14-test = { cmd = "ipython -i restroom_redoubt.py -- --test", cwd = "day14" }
day14 = { cmd = "ipython -i restroom_redoubt.py -- -f input.txt", cwd = "day14" }
day15-test = { cmd = "ipython -i warehouse_woes.py -- --test", cwd = "day15" }
day15 = { cmd = "ipython -i warehouse_woes.py -- -f input.txt", cwd = "day15" }
day22-test = { cmd = "ipython -i monkey_market.py -- --test", cwd = "day22" }
day22 = { cmd = "ipython -i monkey_market.py -- -f input.txt", cwd = "day22" }
day23-test = { cmd = "ipython -i lan_party.py -- --test", cwd = "day23" }
day23 = { cmd = "ipython -i lan_party.py -- -f input.txt", cwd = "day23" }

[tool.pixi.dependencies]
ipython = ">=8.30.0,<9"
numpy = ">=2.1.3,<3"
pandas = ">=2.2.3,<3"
duckdb = ">=1.1.3,<2"
tqdm = ">=4.67.1,<5"

[tool.basedpyright]
include = ["day*"]
typeCheckingMode = "standard"

