[project]
authors = [{name = "Mosqueteiro"}]
dependencies = []
description = "Advent of Code challenges. Years are separated into branches."
name = "AdventOfCode"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
ipython = ">=8.30.0,<9"
numpy = ">=2.1.3,<3"
pandas = ">=2.2.3,<3"

[tool.basedpyright]
include = ["day*", "shared/aoc_utils"]
typeCheckingMode = "standard"

[tool.pixi.tasks]
aoc-setup = "cd shared && pixi run setup"

