[project]
authors = [{name = "Mosqueteiro"}]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]
description = "Advent of Code challenges. Years are separated into different directories."
name = "AdventOfCode"
requires-python = ">= 3.11"
version = "2025.12.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["https://conda.modular.com/max-nightly", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
ipython = ">=8.30.0,<9"
numpy = ">=2.1.3,<3"
pandas = ">=2.2.3,<3"
python-dotenv = ">=1.2.1,<2"

[tool.pixi.pypi-dependencies]
aoc_utils = { path = "shared", editable = true }

[tool.pixi.feature.mojo.dependencies]
mojo = ">=0.26,<0.28"

[tool.pixi.environments]
mojo = { features = ["mojo"], solve-group = "mojo" }

[tool.basedpyright]
include = ["day*", "shared/aoc_utils"]
typeCheckingMode = "standard"

[tool.pixi.tasks]
aoc-test-import = "python -c 'import aoc_utils; print(\"Import Successful\")'"
aoc-setup = "python -m aoc_utils setup"
aoc-puzzle-input = { cmd = "python -m aoc_utils puzzle_input " }

